added second commit

--- a/my.html
+++ b/my.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style/blog.css">
     <title>Document</title>
+
 </head>
 <body>
+    <h3> blog site </h3>
     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, quam!</p>
+<div>
+    <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus earum voluptates a perspiciatis laborum illo quas aut voluptas vero voluptatibus?</p>
+    <li>
+        web
+    </li>
+    <ul>
+        <li>app</li>
+        <li> desk</li>
+    </ul>
+</div>
 </body>
 </html>
