--- a/my.html
+++ b/my.html
@@ -20,5 +20,9 @@
         <li> desk</li>
     </ul>
 </div>
+<div class="nd">
+    <h3> third  blog </h3>
+    <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis tenetur impedit quas pariatur veritatis aliquid hic, nostrum assumenda neque dignissimos obcaecati facere ullam. Magni adipisci vero, facilis atque id ipsum!</p>
+</div>
 </body>
 </html>
