--- a/my.html
+++ b/my.html
@@ -24,5 +24,10 @@
     <h3> third  blog </h3>
     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis tenetur impedit quas pariatur veritatis aliquid hic, nostrum assumenda neque dignissimos obcaecati facere ullam. Magni adipisci vero, facilis atque id ipsum!</p>
 </div>
+<div>
+    <p> Lorem ipsum dolor sit amet.</p>
+    <h3> website</h3>
+
+</div>
 </body>
 </html>
