--- a/my.html
+++ b/my.html
@@ -33,5 +33,11 @@
     
     <iframe width="560" height="315" src="https://www.youtube.com/embed/pwUam4zTmUc?si=cDt1wVquNmwNx6mV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </div>
+<div>
+    <p>image adees</p>
+    <h1 style="text-align: center;"> gallery</h1>
+    <img src="images/download (1).jpg" alt="">
+    <img src="images/download.jpg" alt="">
+</div>
 </body>
 </html>
