--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title> shelden  copper</title>
 </head>
 <body>
-    
+    <h3>gallery</h3>
+    <div>
+        <p>image adees</p>
+        <h1 style="text-align: center;"> gallery</h1>
+        <img src="images/download (1).jpg" alt="">
+        <img src="images/download.jpg" alt="">
+    </div>
 </body>
 </html>
